--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 body {
-	background: #CCCCCC
+	background:#A9A9F5
+}
+
+#banner {
+	width: 100%;
+}
+
+h1 {
+	text-align: center
 }
 
 p {
 	text-align: center;
 }
 
+#missao {
+	font-size: 20px
+}
+
 em strong {
-	color: #FF0000;
+	color: #;
 }
